--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
         "type": "git",
         "url": "git://github.com/hit9/heapq.js"
     },
-    "devDependencies": {"should": "*"},
+    "devDependencies": {
+        "should": "*",
+        ""mocha": "*"
+    },
     "description": "Heap queue implementation for nodejs/iojs.",
     "author": "hit9 <hit9@icloud.com>",
     "keywords": ["heapq", "heap", "queue"],
